fix layout  numerationComponent e estilo scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,26 @@
   }
 } */
 
+::-webkit-scrollbar {
+  width: 8px; /* Largura da scrollbar */
+  height: 8px; /* Altura para scroll horizontal */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Cor do fundo */
+  border-radius: 10px; /* Deixa mais arredondado */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Cor do "polegar" da scrollbar */
+  border-radius: 10px;
+  transition: background 0.3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Efeito ao passar o mouse */
+}
+
 body {
  margin:0;
  padding:0;
